# aruco-geobits

./: CMakeLists.txt  LICENSE  README.md  detector_dictionary.yml  detector_params.yml  dji_fc300_calib.xml
src/: drnmppr-calibrate-camera.cpp  drnmppr-create-dictionary.cpp  drnmppr-create-marker.cpp  drnmppr-detect-marker.cpp
